--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "serverless": "^1.44.1"
+    "serverless": ">=1 <3"
   },
   "description": "A serverless plugin for creating CloudFormation ChangeSets",
   "devDependencies": {
